# SilverGB

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .vcpkg_deps.txt  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  makefile  vcpkg.json
docs/: GBSOUND_cleaned.txt  Nitty Gritty Gameboy VRAM Timing.txt  cpu.txt  gbc_cpu_timing.txt  mem_map.txt  opcodes.txt
misc/: cfg_class_gen.py  config_options.txt  flag_test.py
res/icon/: silver_icon.xpm
src/: CMakeLists.txt  audio.cpp  audio.hpp  cart.cpp  cart.hpp  cfg.cpp  cfg.hpp  cfg_fields.hpp  core.cpp  core.hpp  cpu.cpp  cpu.hpp  cpu_disassem.cpp  defs.hpp  file.cpp  file.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  input_handler.hpp  io.cpp  io.hpp  io_reg.hpp  main.cpp  mem.cpp  mem.hpp  sdl.cpp  sdl.hpp  util.cpp  util.hpp  video.cpp  video.hpp
src/gb/: cart.cpp  cart.hpp  core.cpp  core.hpp  cpu_disassem.cpp  input.cpp  input.hpp  io.cpp  video.cpp
src/gb_core/: CMakeLists.txt  apu.cpp  apu.hpp  audio.cpp  cart.cpp  cart.hpp  core.cpp  core.hpp  cpu.cpp  cpu.hpp  cpu_disassem.cpp  defs.hpp  initial_state.cpp  input.cpp  io.cpp  io.hpp  joy.cpp  joy.hpp  mem.cpp  mem.hpp  new_cpu.c  new_cpu.h  ppu.cpp  ppu.hpp  video.cpp
src/gb_core/carts/: mbc1.hpp  mbc2.hpp  mbc3.hpp  mbc5.hpp  mbc_base.hpp  rom.hpp
src/gb_utilities/: file.cpp
src/gba_core/: CMakeLists.txt  arm_instruction.cpp  arm_instruction.hh  cart.cpp  cart.hpp  cpu.cpp  cpu.hpp  io.cpp  io.hpp  main.cpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/inc/: file.hpp
src/inc/cfg/: cfg.hpp  cfg_fields.hpp
src/inc/gb_core/: apu.hpp  audio.hpp  cart.hpp  core.hpp  cpu.hpp  defs.hpp  input.hpp  io.hpp  io_reg.hpp  joy.hpp  mem.hpp  ppu.hpp  video.hpp
src/inc/gb_core/carts/: mbc1.hpp  mbc2.hpp  mbc3.hpp  mbc5.hpp  mbc_base.hpp  rom.hpp
src/inc/gba_core/: arm_instruction.hh  cart.hpp  cpu.hpp  io.hpp
src/inc/util/: CircularQueue.hpp  bit.hpp  circular_queue.hpp  crc.hpp  file.hpp  flags.hpp  ints.hpp  ringbuffer.hpp  util.hpp  vector.hpp
src/ui/common/: binding.cpp  binding.hpp  cfg.hpp  menu.hpp  recent_files.hpp
src/ui/common/audio/: audio.hpp  audio_portaudio.cpp  audio_rtaudio.cpp  audio_sdlaudio.cpp
src/ui/common/cfg/: cfg.hpp
src/ui/common/gl/: gl.cpp  gl.hpp
src/ui/common/gl/shaders/: 150-core.hpp  300-es.hpp
src/ui/common/input/: gamepad.hpp  gamepad_cocoa.mm  gamepad_sdlinput.cpp
src/ui/imgui/: CMakeLists.txt  app.cpp  app.hpp  gui.cpp  gui.hpp  imgui_shortcut_handler.hpp  main.cpp  util.cpp  util.hpp
src/ui/imgui/gui/: gui.cpp  gui.hpp  settings_window.cpp  settings_window.hpp
src/ui/imgui/imgui/: ImGuiFileBrowser.h
src/ui/imgui/imgui_widgets/: ImGuiFileBrowser.cpp
src/ui/imgui/platform/: platform.hpp
src/ui/imgui/platform/cocoa/: app_delegate.hh  app_delegate.mm  app_view_controller.hh  app_view_controller.mm  apple_menu.hh  apple_menu.mm  callback_list.hh  callback_list.mm  main_macos.mm  util.hh
src/ui/imgui/platform/common/: menu.hpp  window.hpp
src/ui/imgui/platform/gtk/: gtk_application.cpp  gtk_application.hpp  gtk_platform.cpp  imgui_impl_gtkmm.cpp  imgui_impl_gtkmm.hpp  main.cpp  textures.cpp  textures.hpp
src/ui/sdl/: CMakeLists.txt  main.cpp  main_opengl.cpp  main_sdl.cpp
src/ui/wx/: CMakeLists.txt  cfg.hpp  helpers.hpp  main_menu.hpp  main_wnd.cpp  main_wnd.hpp  resource.rc
src/util/: CMakeLists.txt  CircularQueue.cpp  CircularQueue.hpp  bit.hpp  crc.hpp  decl.hpp  file.cpp  file.hpp  flags.hpp  ints.hpp  log.cpp  log.hpp  util.hpp
src/util/types/: circular_queue.hpp  pixel.hpp  primitives.hpp  ringbuffer.hpp  vector.hpp
